# jackal-gym

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
docker/: Dockerfile  build.sh  connect_to_container.sh  run.sh
launch/: jackal_world.launch  main.launch
src/: gazebo_simulation.py  jackal_env.py  qlearning.py  sarsa.py  train.py
