<?xml version="1.0"?>
<package>
  <name>jackal-gym</name>
  <version>0.0.1</version>
  <description>The jackal-gym package</description>
  <maintainer email="ionel@berkeley.edu">ionel</maintainer>
  <license>Apache</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
